--- a/other.html
+++ b/other.html
@@ -9,7 +9,7 @@
 </head>
 
 <ul>
-  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
 
   <li><a href="mainplot.html">The Main Plot</a></li>
 
@@ -19,7 +19,7 @@
 
   <li><a href="prequels.html" >The Prequels</a></li>
 
-  <li><a href="other.html">Other information</a></li>
+  <li><a class="active" href="other.html">Other information</a></li>
  
   <li style="float:right"><a href="">About</a></li>
 </ul>
