--- a/episodeplot.html
+++ b/episodeplot.html
@@ -9,11 +9,11 @@
 </head>
 
 <ul>
-  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
 
   <li><a href="mainplot.html">The Main Plot</a></li>
 
-  <li><a href="episodeplot.html">The Episode Plots</a></li>
+  <li><a class="active" href="episodeplot.html">The Episode Plots</a></li>
 
   <li><a href="movieplot.html">The Movie Plot</a></li>
 
