--- a/mainplot.html
+++ b/mainplot.html
@@ -9,9 +9,9 @@
 </head>
 
 <ul>
-  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
 
-  <li><a href="mainplot.html">The Main Plot</a></li>
+  <li><a class="active" href="mainplot.html">The Main Plot</a></li>
 
   <li><a href="episodeplot.html">The Episode Plots</a></li>
 
@@ -29,4 +29,3 @@
 
 </body>
 </html>
-
