--- a/prequels.html
+++ b/prequels.html
@@ -9,7 +9,7 @@
 </head>
 
 <ul>
-  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
 
   <li><a href="mainplot.html">The Main Plot</a></li>
 
@@ -17,7 +17,7 @@
 
   <li><a href="movieplot.html">The Movie Plot</a></li>
 
-  <li><a href="prequels.html" >The Prequels</a></li>
+  <li><a class="active" href="prequels.html" >The Prequels</a></li>
 
   <li><a href="other.html">Other information</a></li>
  
