tryna figure how wtf im doimg

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <li style="float:right"><a href="">About</a></li>
 </ul>
 
-    <h1></h1>
-  <p></p>
+    <h1>Home</h1>
+  <p>Mononoke Home description</p>
 
 </body>
 </html>
