--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
   <li style="float:right"><a href="">About</a></li>
 </ul>
 
+<div class="logo-section">
+  <img src="logo.png" alt="Logo" class="logo">
+  
     <h1>Home</h1>
   <p>Mononoke Home description</p>
 
+</div>
+
+</ul>
+
 </body>
 </html>
-
