--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </ul>
 
 <div class="logo-section">
-  <img src="logo.png" alt="Logo" class="logo">
+  <img src="mononoke-mononoke-logo-3u3jptPG.jpg" alt="Logo" class="logo">
   
     <h1>Home</h1>
   <p>Mononoke Home description</p>
