stuff i did at home 1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <li><a href="episodeplot.html">The Episode Plots</a></li>
 
-  <li><a href="movieplot.html">The Movie Plot</a></li>
+  <li><a href="movieplot.html">The Movie Summary</a></li>
 
   <li><a href="prequels.html" >The Prequels</a></li>
 
@@ -27,8 +27,8 @@
 <div class="logo-section">
   <img src="mononoke-mononoke-logo-3u3jptPG.jpg" alt="Logo" class="logo">
   
-    <h1>Home</h1>
-  <p>Mononoke Home description</p>
+    
+  <p>  </p>
 
 </div>
 
