--- a/prequels.html
+++ b/prequels.html
@@ -15,7 +15,7 @@
 
   <li><a href="episodeplot.html">The Episode Plots</a></li>
 
-  <li><a href="movieplot.html">The Movie Plot</a></li>
+  <li><a href="movieplot.html">The Movie Summary</a></li>
 
   <li><a class="active" href="prequels.html" >The Prequels</a></li>
 
