--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <div class="logo-section">
   <img src="mononoke-mononoke-logo-3u3jptPG.jpg" alt="Logo" class="logo">
   
-    
-  <p>  </p>
+  
+  <p> Welcome to my Mononoke Fanpage! Here, you will find basic information and summaries of Mononoke's lore and history!</p>
 
 </div>
 
