--- a/movieplot.html
+++ b/movieplot.html
@@ -25,7 +25,10 @@
 </ul>
 
     <h1></h1>
-  <p></p>
+  <p> Mononoke the Movie: Phantom in the Rain is a 2024 Japanese animated supernatural psychological horror film written and directed by Kenji Nakamura with Kōji Yamamoto as a co-writer; the film is based on the Mononoke anime television series, which in turn is a spin-off of Ayakashi: Samurai Horror Tales anthology series, both created by Toei Animation. Produced by EOTA and co-distributed by Giggly Box and Twin Engine
+
+A girl named Asa is trying to advance her career, while another named Kame is seeking her dream to participate in the carnal workings of the Inner Chambers. As the elderly Utayama does her best to conceal its secrets, the Medicine Seller arrives and begins to unravel the horrifying and painful truth at the heart of the Inner Chambers.
+</p>
 
   
 </body>
