--- a/prequels.html
+++ b/prequels.html
@@ -25,7 +25,8 @@
 </ul>
 
     <h1></h1>
-  <p></p>
+  <p>Mononoke the Movie: The Ashes of Rage In July 2024, it was announced that a sequel was in production, and later that month, it was announced that the Mononoke film project will have three films. The second film, titled Mononoke the Movie: The Ashes of Rage, was released on March 14, 2025. The third film is set to release in  2026.
+</p>
   
 </body>
 </html>
