--- a/other.html
+++ b/other.html
@@ -25,7 +25,8 @@
 </ul>
 
     <h1></h1>
-  <p></p>
+  <p>The Sword of Exorcism is the primary weapon of the Medicine Sellers, wielded by the Divine Rituals to slay the Mononoke once its shape, truth, and reason have been found. Each successful reveal is affirmed when the sword shuts its mouth. Once the form, truth and reason are found, the Medicine Seller performs a ritual for its unsheathing, which is confirmed when the sword yells Tokihanats. From this, we can ascertain that the sword possesses some form of sentience. The Sword of Exorcism 'Ri' have been revealed. These swords correspond to the 64 hexagrams that are found in the Book of Changes or the I Ching.
+</p>
   
 </body>
 </html>
