--- a/episodeplot.html
+++ b/episodeplot.html
@@ -24,14 +24,18 @@
   <li style="float:right"><a href="">About</a></li>
 </ul>
 
-    <h1></h1>
-  <p> 1-2: Zashiki-warashi 
+    <h1> 1-2: Zashiki-warashi </h1>
+  <p> 
 While spending the night in a traditional inn, the medicine seller stumbles upon a strange phenomenon. A pregnant woman named Shino, who is desperately seeking shelter at the inn, is led to the last vacant room.  The room, though, is haunted by a group of Zashiki Warashi. When the Zashiki Warashi kills an assassin aiming for Shino's life, protecting Shino and her unborn child. The medicine seller inquires into the origin of the mononoke. <br>
 <br>
 The innkeeper reveals that the inn used to be a brothel which she owned and ran. The innkeeper forced her prostitutes to abort their unborn children in order to continue working; Shino's room is the room in which the abortions took place. The medicine seller realizes that the mononoke are attracted to Shino because of their strong desire to be born and have a mother. <br>
 <br>
 The Zashiki Warashi want Shino to give birth to them, and she agrees, much to the Medicine Seller's dismay. She removes the talisman warding off the mononoke from her stomach. As it turns out, one of the Zashiki Warashi that she had met upon her arrival was in fact her own child. However, the overload of all the spirits causes Shino's in-the-womb child to start bleeding. At this point, realizing their wish would only cause harm to the only person who showed them kindness, the Zashiki Warashi smiles and allows the Medicine Seller to destroy them with the sword. <br>
 </p>
+ 
+<div style="text-align: center;">
+<img src="Shino.png">
+</div>
 
 
 </body>
