--- a/movieplot.html
+++ b/movieplot.html
@@ -30,7 +30,10 @@
 A girl named Asa is trying to advance her career, while another named Kame is seeking her dream to participate in the carnal workings of the Inner Chambers. As the elderly Utayama does her best to conceal its secrets, the Medicine Seller arrives and begins to unravel the horrifying and painful truth at the heart of the Inner Chambers.
 </p>
 
-  
+  <div style="text-align: center;">
+    <img src="konmononoke.png">
+  </div>
+
 </body>
 </html>
 
