--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </ul>
 
 <div class="logo-section">
-  <img src="mononoke-mononoke-logo-3u3jptPG.jpg" alt="Logo" class="logo">
+  <img src="Screenshot_9-2-2026_84025_www.bing.com.jpeg" alt="Logo" class="logo">
   
   
   <p> Welcome to my Mononoke Fanpage! Here, you will find basic information and summaries of Mononoke's lore and history!</p>
