--- a/episodeplot.html
+++ b/episodeplot.html
@@ -15,13 +15,18 @@
 
   <li><a class="active" href="episodeplot.html">The Episode Plots</a></li>
 
-  <li><a href="movieplot.html">The Movie Plot</a></li>
+  <li><a href="movieplot.html">The Movie Summary</a></li>
 
   <li><a href="prequels.html" >The Prequels</a></li>
 
   <li><a href="other.html">Other information</a></li>
  
 </ul>
+
+
+<div class="logo-section">
+  <img src="Screenshot_9-2-2026_84025_www.bing.com.jpeg" alt="Logo" class="logo">
+  
 
     <h1> 1-2: Zashiki-warashi </h1>
   <p> 
