--- a/prequels.html
+++ b/prequels.html
@@ -23,6 +23,11 @@
  
 </ul>
 
+
+<div class="logo-section">
+  <img src="Screenshot_9-2-2026_84025_www.bing.com.jpeg" alt="Logo" class="logo">
+  
+
     <h1></h1>
   <p>Mononoke the Movie: The Ashes of Rage In July 2024, it was announced that a sequel was in production, and later that month, it was announced that the Mononoke film project will have three films. The second film, titled Mononoke the Movie: The Ashes of Rage, was released on March 14, 2025. The third film is set to release in  2026.
 </p>
@@ -31,6 +36,7 @@
     <img src="mononokemovie1.png">
     <img src="Mononoke_Ashes_Of_Rage.png">
     <img src="mononokecurse.png">
+
   </div>
 
 
