--- a/movieplot.html
+++ b/movieplot.html
@@ -23,6 +23,11 @@
 
 </ul>
 
+
+<div class="logo-section">
+  <img src="Screenshot_9-2-2026_84025_www.bing.com.jpeg" alt="Logo" class="logo">
+  
+
     <h1></h1>
   <p> Mononoke the Movie: Phantom in the Rain is a 2024 Japanese animated supernatural psychological horror film written and directed by Kenji Nakamura with Kōji Yamamoto as a co-writer; the film is based on the Mononoke anime television series, which in turn is a spin-off of Ayakashi: Samurai Horror Tales anthology series, both created by Toei Animation. Produced by EOTA and co-distributed by Giggly Box and Twin Engine
 
