--- a/other.html
+++ b/other.html
@@ -9,17 +9,17 @@
 </head>
 
 <ul>
-  <li><a href="index.html">Home</a></li>
+  <li><a href="index.html" target="_blank">Home</a></li>
 
-  <li><a href="mainplot.html">The Main Plot</a></li>
+  <li><a href="mainplot.html" target="_blank">The Main Plot</a></li>
 
-  <li><a href="episodeplot.html">The Episode Plots</a></li>
+  <li><a href="episodeplot.html" target="_blank">The Episode Plots</a></li>
 
-  <li><a href="movieplot.html">The Movie Summary</a></li>
+  <li><a href="movieplot.html" target="_blank">The Movie Summary</a></li>
 
-  <li><a href="prequels.html" >The Prequels</a></li>
+  <li><a href="prequels.html" target="_blank">The Prequels</a></li>
 
-  <li><a class="active" href="other.html">Other information</a></li>
+  <li><a class="active" href="other.html" target="_blank">Other information</a></li>
 
 </ul>
 
@@ -41,15 +41,15 @@
 
   <p>references</p>
 
- <p> <a href="https://mononoke.fandom.com/wiki/Mononoke_(Series)">Mononoke Series Wiki</a><br>
+ <p> <a href="https://mononoke.fandom.com/wiki/Mononoke_(Series)" target="_blank">Mononoke Series Wiki</a><br>
   <br>
-     <a href="https://en.wikipedia.org/wiki/Mononoke_the_Movie:_Phantom_in_the_Rain">Mononoke: Phantom In The Rain</a><br>
+     <a href="https://en.wikipedia.org/wiki/Mononoke_the_Movie:_Phantom_in_the_Rain" target="_blank">Mononoke: Phantom In The Rain</a><br>
      <br>
-     <a href="https://mononoke.fandom.com/wiki/Sword_of_Exorcism">Sword Of Exorism</a><br>
+     <a href="https://mononoke.fandom.com/wiki/Sword_of_Exorcism" target="_blank">Sword Of Exorism</a><br>
      <br>
-     <a href="https://mononoke.fandom.com/wiki/Medicine_Seller_of_Ri">Medicine Seller Of Ri</a><br>
+     <a href="https://mononoke.fandom.com/wiki/Medicine_Seller_of_Ri" target="_blank">Medicine Seller Of Ri</a><br>
      <br>
-     <a href="https://mononoke.fandom.com/wiki/Medicine_Seller_of_Kun">Medicine Seller Of Kon/Kun</a><br>
+     <a href="https://mononoke.fandom.com/wiki/Medicine_Seller_of_Kun" target="_blank">Medicine Seller Of Kon/Kun</a><br>
      <br>
     </p>
 
