fixing target blank

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 
 <ul>
-  <li><a class="active" href="index.html" target="_blank">Home</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
 
-  <li><a href="mainplot.html" target="_blank">The Main Plot</a></li>
+  <li><a href="mainplot.html">The Main Plot</a></li>
 
-  <li><a href="episodeplot.html" target="_blank">The Episode Plots</a></li>
+  <li><a href="episodeplot.html">The Episode Plots</a></li>
 
-  <li><a href="movieplot.html" target="_blank">The Movie Summary</a></li>
+  <li><a href="movieplot.html">The Movie Summary</a></li>
 
-  <li><a href="prequels.html" target="_blank">The Prequels</a></li>
+  <li><a href="prequels.html" >The Prequels</a></li>
 
-  <li><a href="other.html" target="_blank">Other information</a></li>
+  <li><a href="other.html">Other information</a></li>
  
 </ul>
 
